fixing item problem

--- a/parts/Implementation.tex
+++ b/parts/Implementation.tex
@@ -26,6 +26,7 @@ The main data structures offered by Pandas are series (to store data according t
 \label{sec:talend}
 We used  Talend Open Studio to create and develop ETL processes. It is a tool based on Java and with an interface derived from that of Eclipse (Figure \ref{fig:Talend}). It allows you to design ETL processes visually, and offers more than nine hundred components (the following list is not exhaustive)\cite{TalendOpenStudio}: 
 \begin{itemize}
+\renewcommand{\labelitemi}{$\bullet$}
 \item Connect to different data sources for reading and writing:
 \begin{itemize}
 \item Flat files, .xml, .csv, xls, etc.
@@ -91,6 +92,7 @@ The presented dashboards illustrate some different ways we can visualize some re
 Both dashboards are a web application developed using bootstrap\cite{IntroductionBootstrapV5}  framework and the Highcharts  library.
 
 \begin{itemize}
+    \renewcommand{\labelitemi}{$\bullet$}
     \item \textbf{Administration Dashboard:}
      \begin{figure}[h!]
         \center
