--- a/parts/health_and_data.tex
+++ b/parts/health_and_data.tex
@@ -5,6 +5,7 @@ In this chapter, we provide an overview of data from the health sector and the a
 \section{Healthcare Environment}
 Healthcare is a multi-dimensional system established with the sole aim for the prevention, diagnosis, and treatment of health-related issues or impairments in humans. There is three components of a healthcare system\cite{dash2019big}:
 \begin{itemize}
+  \renewcommand{\labelitemi}{$\bullet$}
     \item The health professionals (physicians or nurses): belong to various health sectors like dentistry, medicine, midwifery, nursing, psychology, physiotherapy, and many others.
     \item Health facilities (clinics, hospitals for delivering medicines and other diagnosis or treatment technologies).
     \item Financing institution supporting the former two.
@@ -50,6 +51,7 @@ Data gathered for Health Informatics research does exhibit many of these qualiti
 \newpage
 Schematically, several health-related activities can be distinguished\cite{martigneneVisualisationUnifieeDonnees}:
 \begin{itemize}
+  \renewcommand{\labelitemi}{$\bullet$}
   \item Pre-admission, admission and administrative discharge activities.
   \item T2A invoicing or valuation activities.
   \item Care activities in the accommodation service.
