--- a/parts/contribution.tex
+++ b/parts/contribution.tex
@@ -15,6 +15,7 @@ The aim of this work is to propose a data warehouse system that organizes data c
 We present in this section architecture for healthcare data warehouses and solutions that attempt to integrate infoVis into medical data and medical structures which could be used by executive managers, doctors, physicians and other health professionals to support the healthcare process.  Medical data existing today in multiple sources with different formats makes it necessary to have certain data integration techniques. A healthcare data warehouse is therefore needed to integrate the different data sources into a central data repository and analyze this data.
 
 \begin{itemize}
+  \renewcommand{\labelitemi}{$\bullet$}
   \item \textbf{\textit{A Healthcare Data Warehouse for Cancer Diseases:}} Dr.Osama E.Sheta and Ahmed Nour Eldeen discussed in their paper\cite{shetaBuildingHealthCare2012} the implementation of a healthcare data warehouse for cancer diseases, they proposed  two stages approach for the building cancer data warehouse: 
   
   \begin{enumerate}
@@ -61,12 +62,14 @@ We mainly focused on the "Rendering" step in the visualization pipeline(\ref{fig
 \subsection{Why XML?}
 The rise of XML (eXtensible Markup Language) in patient care has been driven by the needs for communication among health professionals and between healthcare organizations such as hospitals and health insurance companies.The main advantage of XML is its flexibility, as it allows creators to describe any content easily by generating their own tags\cite{thuy2012s}. Some of XML’s features are\cite{achard2001xml}:
 \begin{itemize}
+\renewcommand{\labelitemi}{$\bullet$}
 \item The XML and DTD files are human readable and thus can be easily edited by people with only a few computer skills. Updating a data model is, therefore, straightforward (at least from a technical point of view).
 \item XML is Internet-oriented and has very rich capabilities for linking data; this can be used for interconnecting databases.
 \item XML provides an open framework for defining standard specifications. This is an important point because medical informatics clearly lacks standardization. For example, querying on multiple molecular biology databases could be greatly facilitated if each database would offer an XML view of their content.
 \end{itemize}
 On the other hand, XML has some weaknesses:
 \begin{itemize}
+\renewcommand{\labelitemi}{$\bullet$}
 \item The overhead of a text based format in data parsing, storage and transmission needs to be evaluated before adopting XML as a general solution. However, a text format means that the source code can be read and edited with any text editor.
 \item It is not clear whether XML satisfactorily addresses the problems of technological scalability. Indeed if XML data are stored in flat files, queries on XML files will not scale because XML in itself does not provide scalable facilities such as indexing or data clustering. This means that parsing should be done on the fly which leads to poor performances. One solution could be to have query optimizations done externally for example using a DataBase Management System (DBMS).
 \end{itemize}
@@ -84,6 +87,7 @@ They conclude that the use of XML as an intermediate medium would be really effi
 
 We focused on extracting the following type of data (each head represents an XML node):
 \begin{itemize}
+\renewcommand{\labelitemi}{$\bullet$}
 \item \textbf{Patient:} That presents the administrative information about the patient x, including his full name, gender, date of birth, address. 
 \item \textbf{Drug:} Presents the list of drugs in the patient’s  prescription, it includes: the drug’s name, its dosage, strength usually mentioned by the doctor, the quantity, and its type(liquid or table).
 \item \textbf{Diagnosis:} Includes the doctor's name, the diseases name, and the observations taken by the medical actor in charge, it also contains the name of the prescribed medications and the date of diagnosis. 
