--- a/parts/dataVis.tex
+++ b/parts/dataVis.tex
@@ -56,6 +56,7 @@ As science progresses, this model has been detailed, Figure \ref{fig:infovispipe
   \item \textbf{\textit{Raw data:}} First, we have to import the data. This implies finding a representation of the original information we want to investigate in terms of a data set. Practically, importing data means choosing a specific dataset implementation and converting the original information to the representation implied by the chosen dataset in order to turn this data into information using Data analysis.
   \item \textbf{\textit{Data Analysis:}} Is the process of bringing order and structure to collected data. mostly using data warehouse systems (\ref{sec:dataWarehouse}), It turns data into information  that teams can use. Analysis is done using systematic methods to look for trends, groupings, or other relationships between different types of data\cite{DataAnalysisVisualization}, following this process:
   \begin{itemize}
+    \renewcommand{\labelitemi}{$\bullet$}
   \item \textbf{\textit{Data Requirements Specification:}} The data required for analysis is based on a question or an experiment. Based on the requirements of those directing the analysis, the data necessary as inputs to the analysis is identified (e.g., Population of people). Specific variables regarding a population (e.g., Age and Income) may be specified and obtained. Data may be numerical or categorical\cite{DataAnalysisProcess}.
   \item \textbf{\textit{Data Collection:}} Guided by the requirements identified, Data can be collected through several sources, including online sources, computers, personnel, and sources from the community.
   \item \textbf{\textit{Data processing:}} The data that is collected must be processed or organized for analysis. For instance, these may involve placing data into rows and columns in a table format (known as structured data) for further analysis, often through the use of spreadsheet or statistical software\cite{DataAnalysis2022}.
@@ -81,6 +82,7 @@ According to Ralph Kimball "a data warehouse is a system that extracts, cleans, 
 
 There are three major areas in the data warehouse architecture as following:
 \begin{itemize}
+  \renewcommand{\labelitemi}{$\bullet$}
   \item \textbf{\textit{Data Acquisition:}} This step covers the process of extracting data from the multi sources, moving all extracted data to the stage and preparing the data for loading into the repository. The two main architectural components of this area are the source data and the data store, which is where all the extracted data is gathered and prepared for loading into the data warehouse.
   
   \item \textbf{\textit{Data processing and storage:}} This stage covers all preparations and analysis that take place on our data from data cleaning to data processing to filtering till the rendering step (the steps mentioned in section\ref{sec:visualization_pipeline}).
@@ -97,6 +99,7 @@ Data integration is the most tedious and time-consuming step in setting up a dec
  
 Several approaches have been developed depending on the integration needs. We present the most used approaches\cite{naitEntropot}:
 \begin{itemize}
+  \renewcommand{\labelitemi}{$\bullet$}
   \item \textbf{\textit{Extract Transform and Load (ETL):}}\newline This is the most used approach in setting up a data warehouse. In this approach, the integration is done in three steps:
 \begin{itemize}
 \item Extracting data from sources.
