--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,7 @@ pdfkeywords={Visualization; Medical data; Graphical Representation; Modeling; XM
 \providecommand{\keywordFR}[1]{\textbf{\textit{Mots clés---}} #1}
 %%%%%%%%%%%%%%%%%%%%%%%
 
-
+\newcommand{\comment}[1]{}
 \begin{document}
 \input{parts/pageTitePage.tex}
 \input{parts/abstract.tex}
