--- a/parts/Implementation.tex
+++ b/parts/Implementation.tex
@@ -1,5 +1,19 @@
 
 \chapter{Implementation}
+\renewcommand{\thesection}{\arabic{section}}
+		
+
+
+
+
+\label{chapitre5}
+		
+		\includegraphics [width=1 \linewidth, height=0.8\textheight, keepaspectratio] {images/chaptersFigures/implementation.png}
+		
+	
+		
+    \newpage
+    \thispagestyle{plain}
 In this chapter, the process of implementation will be covered, starting by the architecture and the tools to the results and how everything fits together.
 
 \section{Tools}
@@ -47,7 +61,7 @@ These components are then assembled as needed to design ETL processes\cite{mehdi
     \caption{Talend Interface.}
     \label{fig:Talend}
 \end{figure}
-\newpage
+\comment{
 \subsection{Tableau}
 \label{sec:tableau}
 Tableau is an excellent data visualization and business intelligence tool used for reporting and analyzing vast volumes of data. It helps users create different charts, graphs, maps, dashboards, and stories for visualizing and analyzing data, to help in making business decisions. Tableau supports powerful data discovery and exploration that enables users to answer important questions in seconds, it can connect to several data sources that other BI tools do not support. Tableau enables users to create reports by joining and blending different datasets and it supports a centralized location to manage all published data sources within an organization\cite{WhatTableauUltimate}.
@@ -57,6 +71,7 @@ Tableau is an excellent data visualization and business intelligence tool used f
     \caption{Tableau Logo.}
     \label{fig:tableau}
 \end{figure}
+}
 \subsection{Highcharts}
 Highcharts is a software library for charting written in pure JavaScript meant to enhance web applications by adding interactive charting capability. 
 It has all the tools needed to create reliable and secure data visualizations by
