--- a/parts/dataVis.tex
+++ b/parts/dataVis.tex
@@ -1,4 +1,18 @@
-\chapter{Information Visualization (infoVis)}
+\chapter{Information Visualization -infoVis-}
+\renewcommand{\thesection}{\arabic{section}}
+		
+
+
+
+
+\label{chapitre3}
+		
+		\includegraphics [width=1 \linewidth, height=0.8\textheight, keepaspectratio] {images/chaptersFigures/dataViz.png}
+		
+	
+		
+    \newpage
+    \thispagestyle{plain}
 
 Human mind is very visual, following Williams et al., visualization is “a cognitive process performed by humans in forming a mental image of a domain space. In computer and information science it is, more specifically, the visual representation of a domain space using graphics, images, animated sequences, and sound augmentation to present the data, structure, and dynamic behavior of large, complex data sets that represent systems, events, processes, objects, and concepts”\cite{williamsVisualization1995}. The (Figure \ref{fig:roseDiagram}) below presents the Florence Nightingale's 'Rose diagram' published in 1858 showing the reduction in the number of deaths in military hospitals in Scutari arising from the changes she instituted\cite{spence2001information} .
 
@@ -9,13 +23,13 @@ Human mind is very visual, following Williams et al., visualization is “a cogn
     \label{fig:roseDiagram}
   \end{figure}
 
- \newpage 
+
   Data visualization involves presenting data in graphical or pictorial form which makes the information easy to understand. It helps to explain facts and determine courses of action. It will benefit any field of study that requires innovative ways of presenting large, complex information\cite{spence2001information}.
 
 
 
   Traditionally, data visualization has been structured along two main fields: scientific visualization and information visualization. A third, newer field, called visual analytics has emerged in the past several years, as a bridge between and also an extension of the former two fields\cite{teleaDataVisualizationPrinciples2008}. In this paper we will focus mainly on the information visualization field.
-
+\newpage
 \section{Definition}
 Information visualization (InfoVis) is the practice of representing data in a meaningful, visual way that users can interpret and easily comprehend, it is a research area that aims to aid users in exploring, understanding, and analyzing data through progressive, iterative visual exploration. With the boom in big data analytics, InfoVis is being widely used in a variety of data analysis applications in different domains, ranging from finance to sports to politics\cite{liuSurveyInformationVisualization2014}.
 \bigbreak
@@ -93,7 +107,6 @@ There are three major areas in the data warehouse architecture as following:
 
 
 
-\newpage
 \section{Data Integration Approaches} 
 Data integration is the most tedious and time-consuming step in setting up a decision-making information system. During this step, the data is transformed and filtered to represent a homogeneous, common and stable source of information. The performance of the SID is closely linked to the quality of data integration. It should be noted that the data integration step is not limited to the decision-making domain. It is more general and can be applied for different needs: bringing together and requesting several operational information systems, communicating applications that have been made in silos (independently of each other), etc.
  
